Course Content from file 1 added

--- a/index.html
+++ b/index.html
@@ -39,6 +39,22 @@
       
 
       <!--Course Content Goes Here-->
+<h2>The following aspects will be covered in this course:</h2>
+<div class="row marketing">
+  <div class="col-lg-6">
+    <h4>1. Git Model</h4>
+    <br/>
+
+    <h4>2. Essential commands</h4>
+    <br/>
+
+    <h4>3. Branching and merging</h4>
+    <br/>
+
+    <h4>4. Conflict resolution</h4>
+    <br/>
+  </div>
+<!--Add content from courseContent2.txt here-->
 
 
       <!-- Footer Goes here -->
