--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="header">
           <ul class="nav nav-pills pull-right">
             <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="mailto:info@knowledge7.com">Contact</a></li>
+	    <li class="active"><a href="contact.html">Contact</a></li>
           </ul>
           <h3 class="text-muted">Knowledge Seven</h3>
       </div>
