Course Content from file 2 added

--- a/index.html
+++ b/index.html
@@ -55,7 +55,20 @@
     <br/>
   </div>
 <!--Add content from courseContent2.txt here-->
+<div class="col-lg-6">
+    <h4>5. Git server setup</h4>
+    <br/>
 
+    <h4>6. Remote operations</h4>
+    <br/>
+
+    <h4>7. Graphical tools</h4>
+    <br/>
+
+    <h4>8. Git troubleshooting</h4>
+    <br/>
+  </div>
+</div>
 
       <!-- Footer Goes here -->
       <div class="footer">
