Main content added

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
       </div>
 
       <!--Main Content Goes Here-->
-      
+<div class="jumbotron">
+        <h1>Effective Git</h1>
+        <p class="lead">Your staff often, if not always, work in team. But collaborative work is almost always a headache because of overlaps, duplications and mistakes which often happen. Git is a powerful version control system (VCS) used by thousands of people around the world to manage their projects.</p>
+        <p><a class="btn btn-lg btn-success" target="" href="http://www.knowledge7.com/training/courses/effective-series/effective-git/" role="button">View More</a></p>
+</div>      
 
       <!--Course Content Goes Here-->
 <h2>The following aspects will be covered in this course:</h2>
